--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,8 @@
 	<body>
 		<nav>
 	      <ul>
-	        <li><a href="index.html">Bio</a></li>
+	        <li><a href="index.html">Home</a></li>
+	        <li><a href="bio.html">Bio</a></li>
 	        <li><a href="resume.html">Resume</a></li>
 	        <li><a href="gallery.html">Gallery</a></li>
 	        <li><a href="style-guide.html">Style Guide</a></li>
