--- a/style-guide.html
+++ b/style-guide.html
@@ -8,12 +8,15 @@
   <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/styles.css">	
 	
+  <!-- Forked from P. Colin Manikoth's Project 3 - Style Guide -->
+
 </head>
 <body>
 	
 	<nav>
       <ul>
-        <li><a href="index.html">Bio</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="bio.html">Bio</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="style-guide.html">Style Guide</a></li>
