--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section>
           <ul>
             <h3>Downloads</h3>
-            <li><a href="download\PasswordTest.jar">Password Tester</a></li>
+            <li><a href="download/PasswordTest.jar">Password Tester</a></li>
           </ul>
         </section>
       </article>      
