--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </header>
       <article>
         <section>
-          <p>This page contains notable projects I have done over time. It is primarily newer project, but I add older projects as I see fit as well.</p>
+          <p>This page contains notable projects I have done over time. It is primarily newer projects, but I add older projects as I see fit as well.</p>
         </section>
 
         <section>
