--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
       <meta charset="UTF-8" />
-      <title>Ted Bickham Bio</title>
+      <title>Theodore Bickham Main Page</title>
 
       <link rel="stylesheet" href="css/normalize.css">
       <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow' rel='stylesheet' type='text/css'>
