--- a/style-guide.html
+++ b/style-guide.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Style Tile</title>
+  <title>Style Guide</title>
 	
   <link rel="stylesheet" href="css/normalize.css">	
   <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow' rel='stylesheet' type='text/css'>
