Preparation for redesign
The website is going to be redesigned to be more presentable and provide
better information on past projects.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
       <meta charset="UTF-8" />
-      <title>Theodore Bickham Main Page</title>
+      <title>Updating...</title>
 
       <link rel="stylesheet" href="css/normalize.css">
-      <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
@@ -13,31 +12,16 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="bio.html">Bio</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="style-guide.html">Style Guide</a></li>
       </ul>
     </nav>
 
     <div>
       <header>
-        <h1>Welcome to my website</h1>
+        <h1>Updating...</h1>
       </header>
       <article>
         <section>
-          <p>This page contains notable projects I have done over time. It is primarily newer projects, but I add older projects as I see fit as well.</p>
-        </section>
-
-        <section>
-          <iframe src="//www.youtube.com/embed/QPUC5ZQ1yiQ?rel=0" frameborder="0" allowfullscreen></iframe>
-        </section>
-
-        <section>
-          <ul>
-            <h3>Downloads</h3>
-            <li><a href="download/PasswordTest.jar">Password Tester</a></li>
-          </ul>
+          <p>This website is being redesigned.</p>
         </section>
       </article>      
     </div>
