--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
       <meta charset="UTF-8" />
@@ -8,22 +8,27 @@
       <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-      </ul>
+    <nav class="border clear">
+        <div id="desk-nav">
+            <a href="index.html"><div>Home</div></a>
+            <a href="index.html"><div>Resume</div></a>
+            <a href="index.html"><div>Projects</div></a>
+            <a href="index.html"><div>About</div></a>
+        </div>
     </nav>
 
-    <div>
-      <header>
-        <h1>Updating...</h1>
-      </header>
-      <article>
-        <section>
-          <p>This website is being redesigned.</p>
-        </section>
-      </article>      
+    <div class="article">
+        <header>
+        <h1 class="right">PivotalTracker</h1>
+        <h1 class="left">Updating...</h1>
+        </header>
+        <article>
+            <div class="main-container">
+                <section>
+                    <p>This website is being redesigned.</p>
+                </section>
+            </div>
+        </article>      
     </div>
   </body>
 </html>
