--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
       <meta charset="UTF-8" />
-      <title>Updating...</title>
 
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/styles.css">
@@ -19,14 +18,26 @@
 
     <div class="article">
         <header>
-        <h1 class="right">PivotalTracker</h1>
-        <h1 class="left">Updating...</h1>
+        <h1 class="right"><a href="https://www.pivotaltracker.com/n/projects/1750313">Current Project</a></h1>
+        <h1 class="left">Updating</h1>
         </header>
         <article>
-            <div class="main-container">
+            <div class="container">
+                <h2>Article</h2>
+                <p class="center">This website is being redesigned.</p>
+            </div>
+
+            <div class="container">
+                <img src="img/1.png" alt="Sample" />
                 <section>
-                    <p>This website is being redesigned.</p>
+                    <h2>Project</h2>
+                    <p>Example project container.</p>
                 </section>
+                <div class="links">
+                    <a href="index.html"><div class="download">Client</div></a>
+                    <a href="index.html"><div class="download">Server</div></a>
+                    <a href="index.html"><div class="download">Source</div></a>
+                </div>
             </div>
         </article>      
     </div>
