--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
       <meta charset="UTF-8" />
-      <title>Updating</title>
+      <title>Ted Bickham - Home</title>
 
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/styles.css">
@@ -11,33 +11,21 @@
     <nav class="border clear">
         <div id="desk-nav">
             <a href="index.html"><div>Home</div></a>
-            <a href="index.html"><div>Resume</div></a>
-            <a href="index.html"><div>Projects</div></a>
-            <a href="index.html"><div>About</div></a>
+            <a href="resume.html"><div>Resume</div></a>
+            <a href="projects.html"><div>Projects</div></a>
         </div>
     </nav>
 
     <div class="article">
         <header>
-        <h1 class="right"><a href="https://www.pivotaltracker.com/n/projects/1750313">Current Project</a></h1>
-        <h1 class="left">Updating</h1>
+        <h1 class="left">Home</h1>
         </header>
         <article>
             <div class="container">
-                <h2>Article</h2>
-                <p class="center">This website is being redesigned.</p>
-            </div>
-
-            <div class="container">
-                <img src="img/1.png" alt="Sample" />
-                <section>
-                    <h2>Project</h2>
-                    <p>Example project container.</p>
-                </section>
+                <h2>About</h2>
+                <p>This website is to provide my resume along with information on projects I have done in the past.</p>
                 <div class="links">
-                    <a href="index.html"><div class="download">Client</div></a>
-                    <a href="index.html"><div class="download">Server</div></a>
-                    <a href="index.html"><div class="download">Source</div></a>
+                    <a href="https://www.linkedin.com/in/theodore-bickham-096543122"><div class="download">LinkedIn</div></a>
                 </div>
             </div>
         </article>      
