--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
                     <p>A game where you must answer trivia questions in order to reach the exit. This is a team project which I worked
                     on the database for the game. The database contains all questions and answered used within the game. I also designed
                     a mode where you can add or remove questions from the game. The mode lets you make databases, tables, and rows. A database
-                    would represent a theme, a table represent a category with the theme, and rows represent each questing inside. Deleted data
+                    would represent a theme, a table represent a category with the theme, and rows represent each question inside. Deleted data
                     becomes unavailable once the user commits their changes.</p>
                 </section>
             </div>
