--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,17 @@
             <h1 class="left">Projects</h1>
         </header>
         <article>
+			<div id="ruby_adventure" class="container">
+                <section>
+                    <h2>Ruby's Adventure - Unity</h2>
+                    <p>My final result from completing on the 2D Game Development Tutorial on Unity. Link for both my version of the game as well as the tutorial I followed below.</p>
+                </section>
+                <div class="links">
+                    <a href="https://learn.unity.com/project/ruby-s-2d-rpg"><div class="download">Tutorial</div></a>
+					<a href="download/Ruby's Adventure.zip"><div class="download">Download</div></a>
+                </div>
+            </div>
+		
             <div id="trivia_maze" class="container">
                 <section>
                     <h2>Trivia Maze - C#</h2>
