Resume Removal and Status Update
Remove the old resume page and announce the site is out of date and may receive a redesign in the future.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <nav class="border clear">
         <div id="desk-nav">
             <a href="index.html"><div>Home</div></a>
-            <a href="resume.html"><div>Resume</div></a>
             <a href="projects.html"><div>Projects</div></a>
         </div>
     </nav>
@@ -23,10 +22,7 @@
         <article>
             <div class="container">
                 <h2>About</h2>
-                <p>This website is to provide my resume along with information on projects I have done in the past.</p>
-                <div class="links">
-                    <a href="https://www.linkedin.com/in/theodore-bickham-096543122"><div class="download">LinkedIn</div></a>
-                </div>
+                <p>This website not up to date and may receive a redesign sometime in the future. The projects page and downloads will still be available.</p>
             </div>
         </article>      
     </div>
