--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,6 @@
     <nav class="border clear">
         <div id="desk-nav">
             <a href="index.html"><div>Home</div></a>
-            <a href="resume.html"><div>Resume</div></a>
             <a href="projects.html"><div>Projects</div></a>
         </div>
     </nav>
@@ -21,6 +20,19 @@
             <h1 class="left">Projects</h1>
         </header>
         <article>
+			<div id="shape_tactics" class="container">
+                <a href="img/shape_tactics.png"><img src="img/shape_tactics.png" alt="Shape Tactics" /></a>
+                <section>
+                    <h2>Shape Tactics - Unity</h2>
+                    <p>A 2D game project I made on my own that is a tactics game on a square grid. Each shape has it's own abilities.<br>
+					Triangles are able to attack. Squares can take multiple attacls. Crosses can heal damage or give a shield to an ally.<br><br>
+					As for controls, left click an unit will let you choose where to move to.<br>
+					Left clicking on another unit will bring the unit to the last possible space in the path and interact with the other unit.<br>
+					You can cancel movement by right clicking. You can also segment your movement by clicking the mouse wheel.<br>
+					You can move the camera with the WASD keys and toggle the grid with the G key.<br><br>
+					I may add a build at some point in the future.</p>
+                </section>
+            </div>
 			<div id="ruby_adventure" class="container">
                 <section>
                     <h2>Ruby's Adventure - Unity</h2>
